--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "webpack-dev-server": "^4.0.0-beta.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "vue": "^3.2.36",
-    "vuex": "^4.0.2"
+    "vue": "^3.2.36"
   }
 }
