--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "pinia": "^2.0.0-rc.10",
     "vue": "^3.2.36"
   }
 }
